Gateway/mike-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: mike-gateway
  namespace: gateway
  annotations:
    nginx.ingress.kubernetes.io/use-proxy-protocol: "true"
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All
